<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_profile"
    android:padding="30dp"
    tools:context=".Profile">

    <ImageView
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_edit"
        android:layout_height="110dp"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/ep_name"
        android:layout_marginTop="180dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:hint="@string/name"
        android:layout_height="70dp"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/ep_surname"
        android:layout_marginTop="260dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:hint="@string/surname"
        android:layout_height="70dp"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/ep_height"
        android:layout_marginTop="340dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:hint="@string/height_cm"
        android:layout_height="70dp"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/ep_weight"
        android:layout_marginTop="420dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:hint="@string/weight_kg"
        android:layout_height="70dp"/>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_calculate"
        android:background="@drawable/button_effect"
        android:hint="@string/calculate2"
        android:textSize="25sp"
        android:layout_marginTop="550dp"
        android:layout_height="60dp"/>



</FrameLayout>